removed html from position.html that was transfered from index

--- a/careers/position.html
+++ b/careers/position.html
@@ -86,94 +86,8 @@
     </div>
 </section>
 
-<section id="traits">
-    <div class="traits-container">
-        <div class="trait">
-            <img src="../img/trait-create.png">
-            <div class="trait-text-container">
-                <p class="trait-title">Create</p>
-                <p class="trait-descriptor">
-                    We design, build, & optimize to bring meaningful product experiences to people around the world.
-                </p>
-            </div>
-        </div>
+<section class="job-description">
 
-        <div class="trait">
-            <img src="../img/trait-learn.png">
-            <div class="trait-text-container">
-                <p class="trait-title">Learn</p>
-                <p class="trait-descriptor">
-                    Kindle your inner child and let curiosity take you to new heights.
-                </p>
-            </div>
-        </div>
-
-        <div class="trait">
-            <img src="../img/trait-sleep.png">
-            <div class="trait-text-container">
-                <p class="trait-title">Sleep</p>
-                <p class="trait-descriptor">
-                    Work, challenge, and play so you can go to bed and dream with satisfaction.
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="about-us">
-    <div class="sec-container">
-        <h2 class="about-title">What we're all about</h2>
-        <p>
-            Humans are the most amazing and important part of Ultradia. It takes an entire team working together to build something big and that begins with the commitment to grow and challenge each other as individuals. At Ultradia we work hard, we have a good time, we brainstorm constantly, and we love sleep. If that sounds like a good fit to you then we'd love to hear from you. Perhaps we'll be working together shortly and you can join us in our journey to the top.
-        </p>
-        <p>
-            If you don’t see any positions listed that fit your background, don't hesitate to contact us anyway. We’re always looking to connect with talented, like-minded people.
-        </p>
-    </div>
-</section>
-
-<section id="openings-header">
-    <div class="sec-container">
-        <h2>Open Positions</h2>
-    </div>
-</section>
-
-<section id="openings">
-    <div class="sec-container">
-        <div class="row">
-            <h2 class="position-type">Engineering</h2>
-        </div>
-        <div class="row">
-            <div class="position">
-                <h4 class="position-title">Android Developer</h4>
-                <p class="position-description">
-                    We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
-                </p>
-                <button class="view-more">View More</button>
-            </div>
-
-            <div class="position">
-                <h4 class="position-title">Android Developer</h4>
-                <p class="position-description">
-                    We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
-                </p>
-                <button class="view-more">View More</button>
-            </div>
-        </div>
-
-        <div class="row">
-            <h2 class="position-type">Engineering</h2>
-        </div>
-        <div class="row">
-            <div class="position">
-                <h4 class="position-title">Android Developer</h4>
-                <p class="position-description">
-                    We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
-                </p>
-                <button class="view-more">View More</button>
-            </div>
-        </div>
-    </div>
 </section>
 
 <footer>
