added google analytics

--- a/careers/position.html
+++ b/careers/position.html
@@ -125,6 +125,7 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="../js/agency.js"></script>
+<script src="../js/careers.js"></script>
 
 
 </body>
