--- a/careers/index.html
+++ b/careers/index.html
@@ -164,7 +164,7 @@
                     <div class="position" ng-repeat="position in field.positions">
                         <h4 class="position-title">{{position.title}}</h4>
                         <p class="position-description">{{position.shortDes}}</p>
-                        <a href="position.html"><button class="view-more">View More</button></a>
+                        <a ng-href="position/{{position.pid}}"><button class="view-more">View More</button></a>
                     </div>
                 </div>
             </div>
