--- a/careers/position.html
+++ b/careers/position.html
@@ -78,7 +78,7 @@
 <section id="hero-content">
     <div class="sec-container">
         <div class="hero-title">
-            <h1>Software Engineer, Android</h1>
+            <h1>{{position.title}}</h1>
         </div>
         <p class="back-btn">
             <a href="../careers/">Back to openings</a>
@@ -87,6 +87,8 @@
 </section>
 
 <section class="job-description">
+
+
 
 </section>
 
