--- a/careers/openings.html
+++ b/careers/openings.html
@@ -1,3 +1,62 @@
+<section id="hero-content">
+    <div class="sec-container">
+        <div class="hero-title">
+            <h1>Careers</h1>
+            <h4>We'd love your help in making Ultradia better than ever. Come join us!</h4>
+        </div>
+    </div>
+</section>
+
+<section id="traits">
+    <div class="traits-container clearfix">
+        <div class="trait">
+            <img src="../img/trait-create.png">
+            <div class="trait-text-container">
+                <p class="trait-title">Create</p>
+                <p class="trait-descriptor">
+                    We design, build, & optimize to bring meaningful product experiences to people around the world.
+                </p>
+            </div>
+        </div>
+
+        <div class="trait">
+            <img src="../img/trait-learn.png">
+            <div class="trait-text-container">
+                <p class="trait-title">Learn</p>
+                <p class="trait-descriptor">
+                    Kindle your inner child and let curiosity take you to new heights.
+                </p>
+            </div>
+        </div>
+
+        <div class="trait">
+            <img src="../img/trait-sleep.png">
+            <div class="trait-text-container">
+                <p class="trait-title">Sleep</p>
+                <p class="trait-descriptor">
+                    Work, challenge, and play so you can go to bed and dream with satisfaction.
+                </p>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+</section>
+
+<section id="about-us">
+    <div class="sec-container">
+        <h2 class="about-title">What we're all about</h2>
+        <p>
+            Humans are the most amazing and important part of Ultradia. It takes an entire team working together to build something big and that begins with the commitment to grow and challenge each other as individuals. At Ultradia we work hard, we have a good time, we brainstorm constantly, and we love sleep. If that sounds like a good fit to you then we'd love to hear from you. Perhaps we'll be working together shortly and you can join us in our journey to the top.
+        </p>
+    </div>
+</section>
+
+<section id="openings-header">
+    <div class="sec-container">
+        <h2>Open Positions</h2>
+    </div>
+</section>
+
 <section id="openings" ng-app="ultradiaCareers">
     <div class="sec-container" ng-controller="CareersController">
 
