ui-view updates

--- a/careers/index.html
+++ b/careers/index.html
@@ -94,7 +94,7 @@
 		<!-- /.container-fluid -->
 	</nav>
 
-    <ui-view></ui-view>
+    <div ui-view></div>
 
     <footer>
         <div class="sec-container">
