--- a/careers/openings.html
+++ b/careers/openings.html
@@ -57,8 +57,8 @@
     </div>
 </section>
 
-<section id="openings" ng-app="ultradiaCareers">
-    <div class="sec-container" ng-controller="CareersController">
+<section id="openings">
+    <div class="sec-container">
 
         <div class="field-container" ng-repeat="field in openings">
             <div class="row">
