--- a/careers/index.html
+++ b/careers/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ultradiaCareers">
+<html lang="en" >
 
 <head>
 
@@ -46,7 +46,7 @@
 
 </head>
 
-<body id="page-top" class="index" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" class="index" data-spy="scroll" data-target=".navbar-fixed-top" ng-app="ultradiaCareers">
 
     <!-- Navigation -->
 	<nav class="navbar navbar-default navbar-fixed-top">
