--- a/careers/index.html
+++ b/careers/index.html
@@ -154,7 +154,7 @@
     </section>
 
     <section id="openings">
-        <div class="sec-container">
+        <div class="sec-container" ng-controller="CareersController">
 
             <div class="field-container" ng-repeat="field in openings">
                 <div class="row">
