--- a/careers/position.html
+++ b/careers/position.html
@@ -11,4 +11,11 @@
 
 <section class="job-description">
 
+    <div class="sec-container">
+        <p>{{openings.positions.longDesc}}</p>
+        <ul>
+            <li ng-repeat="responsibilities in openings.positions.responsibilities.item"></li>
+        </ul>
+    </div>
+
 </section>
