--- a/careers/index.html
+++ b/careers/index.html
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <h3>{{field.positions.responsibilities.item[0]}}</h3>
+            <h3>{{field.positions.responsibilities.title}}</h3>
         </div>
     </section>
 
