--- a/careers/index.html
+++ b/careers/index.html
@@ -165,6 +165,7 @@
                         <h4 class="position-title">{{position.title}}</h4>
                         <p class="position-description">{{position.shortDes}}</p>
                         <a ng-href="position/{{position.pid}}"><button class="view-more">View More</button></a>
+                        <p>{{position.pid}}</p>
                     </div>
                     <h3>{{field.positions.title}}</h3>
                 </div>
