--- a/careers/index.html
+++ b/careers/index.html
@@ -171,6 +171,8 @@
         </div>
     </section>
 
+    <div ui-view></div>
+
     <footer>
         <div class="sec-container">
             <div class="col-md-4 shrink">
