--- a/careers/position.html
+++ b/careers/position.html
@@ -1,7 +1,7 @@
 <section id="hero-content">
     <div class="sec-container">
         <div class="hero-title">
-            <h1>{{position.title}}</h1>
+            <h1>{{openings.position.title}}</h1>
         </div>
         <p class="back-btn">
             <a href="../careers/">Back to openings</a>
