--- a/careers/index.html
+++ b/careers/index.html
@@ -164,7 +164,9 @@
                     <div class="position" ng-repeat="position in field.positions">
                         <h4 class="position-title">{{position.title}}</h4>
                         <p class="position-description">{{position.shortDes}}</p>
-                        <a ui-sref="position({id: position.pid})"><button class="view-more">View More</button></a>
+                        <a ng-click="$state.go('position', {id: position.pid})"><button class="view-more">View More</button></a>
+
+                        <!--<a ui-sref="position({id: position.pid})"><button class="view-more">View More</button></a>-->
                     </div>
                 </div>
             </div>
