--- a/careers/index.html
+++ b/careers/index.html
@@ -17,8 +17,10 @@
     <!-- Custom CSS -->
     <link href="../css/fonts.css" rel="stylesheet">
 	<link href="../css/careers/careers.css" rel="stylesheet">
+    <link href="../css/careers/position.css" rel="stylesheet">
 
-	<!-- Custom Fonts -->
+
+    <!-- Custom Fonts -->
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <script>
