--- a/careers/position.html
+++ b/careers/position.html
@@ -2,7 +2,7 @@
     <section id="hero-content">
         <div class="sec-container">
             <div class="hero-title">
-                <h1>TEST</h1>
+                <h1>{{position.field}}</h1>
             </div>
             <p class="back-btn">
                 <a href="../careers/">Back to openings</a>
