--- a/careers/openings.html
+++ b/careers/openings.html
@@ -69,7 +69,7 @@
                     <h4 class="position-title">{{position.title}}</h4>
                     <p class="position-description">{{position.shortDes}}</p>
                     <!--<a ng-click="$state.go('position', {id: position.pid})"><button class="view-more">View More</button></a>-->
-                    <a ui-sref="position({id: position.pid})"><button class="view-more">View More</button></a>
+                    <a ui-sref="position({field: 'field.field',id: 'position.pid'})"><button class="view-more">View More</button></a>
                 </div>
             </div>
         </div>
