added content to position template

--- a/careers/position.html
+++ b/careers/position.html
@@ -17,6 +17,9 @@
             <ul>
                 <li ng-repeat="responsibility in position.responsibilities">{{responsibility.item}}</li>
             </ul>
+            <ul>
+                <li ng-repeat="bonus in position.bonuses">{{bonus.point}}</li>
+            </ul>
             <p>{{position.closing}}</p>
         </div>
 
