stying to position template

--- a/careers/position.html
+++ b/careers/position.html
@@ -1,5 +1,5 @@
 <div id="positionTmpl">
-    <section id="hero-content" ng-style="{ background: 'linear-gradient(rgba(50, 50, 50, .35) 0%, rgba(50, 50, 50, .35) 100%), url({{position.image}}), no-repeat';">
+    <section id="hero-content" ng-style="{ background: 'linear-gradient(rgba(0, 0, 0, .35) 0%, rgba(0, 0, 0, 1) 100%), url({{position.image}}), no-repeat';">
         <div class="sec-container">
             <div class="hero-title">
                 <h1>{{position.title}}</h1>
