--- a/careers/position.html
+++ b/careers/position.html
@@ -1,5 +1,5 @@
 <div id="positionTmpl">
-    <section id="hero-content" {{"style='background-image:url( position.image )'"}}>
+    <section id="hero-content" back-img="{{position.image}}">
         <div class="sec-container">
             <div class="hero-title">
                 <h1>{{position.title}}</h1>
