stying to position template

--- a/careers/position.html
+++ b/careers/position.html
@@ -13,10 +13,13 @@
     <section class="job-description">
 
         <div class="sec-container">
+            <h3>Position Details</h3>
             <p>{{position.longDes}}</p>
+            <h4>Responsibilities &amp; Requirements</h4>
             <ul>
                 <li ng-repeat="responsibility in position.responsibilities">{{responsibility.item}}</li>
             </ul>
+            <h4>Extras</h4>
             <ul>
                 <li ng-repeat="bonus in position.bonuses">{{bonus.point}}</li>
             </ul>
