--- a/careers/position.html
+++ b/careers/position.html
@@ -28,6 +28,8 @@
 
     </section>
     <section id="application">
-        <iframe src="https://docs.google.com/forms/d/1sGybcj8__gpsXRI3CTUaOf9-WYEK-12tK515B9vSCkk/viewform?embedded=true" width="720" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <div class="sec-container">
+            <iframe src="https://docs.google.com/forms/d/1sGybcj8__gpsXRI3CTUaOf9-WYEK-12tK515B9vSCkk/viewform?embedded=true" width="720" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
     </section>
 </div>
