--- a/careers/position.html
+++ b/careers/position.html
@@ -28,11 +28,11 @@
 
     </section>
 
-    <!--<section id="application">-->
-        <!--<div class="sec-container">-->
-            <!--<h3>Application</h3>-->
-            <!--<iframe ng-src="https://docs.google.com/forms/d/1sGybcj8__gpsXRI3CTUaOf9-WYEK-12tK515B9vSCkk/viewform?embedded=true" width="720" height="1458" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
-        <!--</div>-->
-    <!--</section>-->
+    <section id="application">
+        <div class="sec-container">
+            <h3>Application</h3>
+            <iframe ng-src="https://docs.google.com/forms/d/1sGybcj8__gpsXRI3CTUaOf9-WYEK-12tK515B9vSCkk/viewform?embedded=true" width="720" height="1458" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+    </section>
 
 </div>
