added careers button to Ultradia page

--- a/about/index.html
+++ b/about/index.html
@@ -223,20 +223,20 @@
                                 </div>
                             </div>
                         </li>
-<!--
+
                         <li class="timeline-inverted">
-                            <div class="timeline-image careerButton">
-															<h4>Work With Us!</h4>
-                            </div>
+                            <a href="https://chronasleep.com/careers/" class="timeline-image careerButton">Work With Us!</a>
+                            <!--<div class="timeline-image careerButton">-->
+                                <!--<h4>Work With Us!</h4>-->
+                            <!--</div>-->
                         </li>
                         <li>
                             <div class="timeline-mission">
                                 <div>
-                                    <p>Come join us to help the world be a better place to sleep.</p>
+                                    <p>Come join us, and make world be a better place to sleep.</p>
                                 </div>
                             </div>
                         </li>
--->
                     </ul>
                 </div>
             </div>
