--- a/chrona/index.html
+++ b/chrona/index.html
@@ -445,7 +445,7 @@
 							<li><a target="_blank" href="../about" title="Learn more about Ultradia">About Us</a></li>
 <!--							<li> FAQ<a href="#" title="Frequently asked questions">FAQ</a></li>-->
 							<li><a target="_blank" href="https://chronasleep.com/about/#contact" title="Say hello">Contact Us</a></li>
-<!--							<li><a target="_blank" href="../careers" title="Work for us">Careers</a></li>-->
+							<li><a target="_blank" href="https://chronasleep.com/careers/" title="Work with us">Careers</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-2 left">
@@ -469,15 +469,6 @@
 				</div>
 			</div>
 		</footer>
-<!--
-		<section>
-			<div class="container">
-				<div class="row">
-					<iframe frameborder='0' height='540px' src='https://www.thunderclap.it/projects/24194-sleep-smarter-not-longer/embed' width='250px'></iframe>
-				</div>
-			</div>
-		</section>
--->
 		
 		
 	<!-- jQuery -->
