--- a/chrona/index.html
+++ b/chrona/index.html
@@ -471,7 +471,7 @@
 		</footer>
 		
 		
-	<!-- jQuery -->
+	<!-- jQuery --->
     <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
