added bobby and nick. removed james

--- a/about/index.html
+++ b/about/index.html
@@ -297,7 +297,7 @@
                     <div class="team-member">
                         <img src="../img/team/sam.png" class="img-responsive img-circle" alt="">
                         <h4>Sam Casey</h4>
-                        <p class="text-muted">Creative Director</p>
+                        <p class="text-muted">Designer, Creativity Advocate</p>
                     </div>
                 </div>
 
@@ -351,15 +351,23 @@
                     <div class="team-member">
                         <img src="../img/team/nate.jpg" class="img-responsive img-circle" alt="">
                         <h4>Nate Moman</h4>
-                        <p class="text-muted">Sound Engineer</p>
+                        <p class="text-muted">Team Catalyst, Acoustic Engineer</p>
                     </div>
                 </div>
 
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="../img/team/james.jpg" class="img-responsive img-circle" alt="">
-                        <h4>James Wall</h4>
-                        <p class="text-muted">Software Engineer</p>
+                        <img src="../img/team/bobby.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Bobby Kidera</h4>
+                        <p class="text-muted">Business Development Specialist</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/nick.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Nick McConnell</h4>
+                        <p class="text-muted">iOS Engineer</p>
                     </div>
                 </div>
 
