integrated sumo-me into chrona site

--- a/chrona/index.html
+++ b/chrona/index.html
@@ -32,21 +32,21 @@
     
     <!-- Facebook Conversion Code for key page views -->
     
-		<script>(function() {
-		var _fbq = window._fbq || (window._fbq = []);
-		if (!_fbq.loaded) {
-		var fbds = document.createElement('script');
-		fbds.async = true;
-		fbds.src = '//connect.facebook.net/en_US/fbds.js';
-		var s = document.getElementsByTagName('script')[0];
-		s.parentNode.insertBefore(fbds, s);
-		_fbq.loaded = true;
-		}
-		})();
-		window._fbq = window._fbq || [];
-		window._fbq.push(['track', '6030319740706', {'value':'0.01','currency':'USD'}]);
-		</script>
-		<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6030319740706&amp;cd[value]=0.01&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+    <script>(function() {
+    var _fbq = window._fbq || (window._fbq = []);
+    if (!_fbq.loaded) {
+    var fbds = document.createElement('script');
+    fbds.async = true;
+    fbds.src = '//connect.facebook.net/en_US/fbds.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(fbds, s);
+    _fbq.loaded = true;
+    }
+    })();
+    window._fbq = window._fbq || [];
+    window._fbq.push(['track', '6030319740706', {'value':'0.01','currency':'USD'}]);
+    </script>
+    <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6030319740706&amp;cd[value]=0.01&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
 
     <script>
 
@@ -59,6 +59,8 @@
         ga('send', 'pageview');
 
     </script>
+
+    <script src="//load.sumome.com/" data-sumo-site-id="08945c6874b7e48b1c21853e96d39b0beb6b92acbbd70002240cab5a25435439" async="async"></script>
 
 	<script src="//fast.eager.io/2kmdLfnqm2.js"></script>
 
