fixed typo on about page with careers button

--- a/about/index.html
+++ b/about/index.html
@@ -233,7 +233,7 @@
                         <li>
                             <div class="timeline-mission">
                                 <div>
-                                    <p>Come join us, and make world be a better place to sleep.</p>
+                                    <p>Come join us, and help make the world a better place to sleep.</p>
                                 </div>
                             </div>
                         </li>
