--- a/about/index.html
+++ b/about/index.html
@@ -279,16 +279,16 @@
 
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="../img/team/alan.png" class="img-responsive img-circle" alt="">
-                        <h4>Alan Sze</h4>
-                        <p class="text-muted">Ultradian Core Engineer</p>
+                        <img src="../img/team/ben.png" class="img-responsive img-circle" alt="">
+                        <h4>Ben Bronsther</h4>
+                        <p class="text-muted">Co-Founder</p>
                     </div>
                 </div>
 
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="../img/team/blake.png" class="img-responsive img-circle" alt="">
-                        <h4>Blake Sakran</h4>
+                        <img src="../img/team/alan.png" class="img-responsive img-circle" alt="">
+                        <h4>Alan Sze</h4>
                         <p class="text-muted">Ultradian Core Engineer</p>
                     </div>
                 </div>
@@ -306,25 +306,17 @@
 
                 <div class="col-sm-3">
                     <div class="team-member">
+                        <img src="../img/team/sam.png" class="img-responsive img-circle" alt="">
+                        <h4>Sam Casey</h4>
+                        <p class="text-muted">Designer, Creativity Advocate</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="team-member">
                         <img src="../img/team/shaun.png" class="img-responsive img-circle" alt="">
                         <h4>Shaun Vaidyan</h4>
                         <p class="text-muted">Application Project Manager</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <img src="../img/team/wade.png" class="img-responsive img-circle" alt="">
-                        <h4>Wade Zeng</h4>
-                        <p class="text-muted">Engineering &amp; Business<br/>Development Partner</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <img src="../img/team/jake.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Jake Strang</h4>
-                        <p class="text-muted">Lead Application Developer</p>
                     </div>
                 </div>
 
@@ -336,8 +328,24 @@
                     </div>
                 </div>
 
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/bobby.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Bobby Kidera</h4>
+                        <p class="text-muted">Business Development Specialist</p>
+                    </div>
+                </div>
+
             </div>
             <div class="row row-center">
+
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/nick.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Nick McConnell</h4>
+                        <p class="text-muted">iOS Engineer</p>
+                    </div>
+                </div>
 
                 <div class="col-sm-3">
                     <div class="team-member">
@@ -349,17 +357,9 @@
 
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="../img/team/bobby.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Bobby Kidera</h4>
-                        <p class="text-muted">Business Development Specialist</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <img src="../img/team/nick.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Nick McConnell</h4>
-                        <p class="text-muted">iOS Engineer</p>
+                        <img src="../img/team/wade.png" class="img-responsive img-circle" alt="">
+                        <h4>Wade Zeng</h4>
+                        <p class="text-muted">Engineering &amp; Business<br/>Development Partner</p>
                     </div>
                 </div>
 
