--- a/chrona/index.html
+++ b/chrona/index.html
@@ -97,14 +97,6 @@
 								<li class="hidden">
 									<a href="#page-top"></a>
 								</li>
-<!--
-								<li class="ultradia">
-									<a class="page-scroll ultradia-hover" href="../about.html">About</a>
-								</li>
--->
-								<!--<li>-->
-									<!--<a class="page-scroll nav-sn" href="#">Blog</a>-->
-								<!--</li>-->
              					<li>
 									<a class="page-scroll nav-sn" href="https://shop.trycelery.com/page/" data-celery="555969b65848f30b0053d4af" data-celery-version="v2">
 										<script async type="text/javascript" src="https://www.trycelery.com/js/celery.js"></script>
@@ -157,10 +149,6 @@
 					</div>
 					<div class="col-xs-3">
 						<ul class="list-inline social-buttons">
-<!--
-							<li><a href="https://instagram.com/sleep_elite/" target="_blank"><i class="fa fa-instagram"></i></a>
-							</li>
--->
 							<li><a href="https://twitter.com/chronasleep" target="_blank"><i class="fa fa-twitter"></i></a>
 							</li>
 							<li><a href="https://www.facebook.com/chronasleep" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -168,14 +156,14 @@
 						</ul>
 					</div>
 				</div>
-				<div class="row">
-					<div>
-						<form method="POST" action="../mail/subscribe.php">
-							<p><input type="text" placeholder="Email Subscription" name="Email" size="20"></p>
-							<p><input type="submit" value="Submit" name="Submit"></p>
-						</form>
-					</div>
-				</div>
+				<!--<div class="row">-->
+					<!--<div>-->
+						<!--<form method="POST" action="../mail/subscribe.php">-->
+							<!--<p><input type="text" placeholder="Email Subscription" name="Email" size="20"></p>-->
+							<!--<p><input type="submit" value="Submit" name="Submit"></p>-->
+						<!--</form>-->
+					<!--</div>-->
+				<!--</div>-->
 			</div>
 		</section>
 		
@@ -462,12 +450,12 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col-sm-4 right">
-						<form method="POST" action="../mail/subscribe.php">
-							<p><input type="text" placeholder="Email Subscription" name="Email" size="20"></p>
-							<p><input type="submit" value="Submit" name="Submit"></p>
-						</form>
-					</div>
+					<!--<div class="col-sm-4 right">-->
+						<!--<form method="POST" action="../mail/subscribe.php">-->
+							<!--<p><input type="text" placeholder="Email Subscription" name="Email" size="20"></p>-->
+							<!--<p><input type="submit" value="Submit" name="Submit"></p>-->
+						<!--</form>-->
+					<!--</div>-->
 				</div>
 			</div>
 		</footer>
