added bob to team and fixed team issues

--- a/about/index.html
+++ b/about/index.html
@@ -287,22 +287,38 @@
 
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="../img/team/alan.png" class="img-responsive img-circle" alt="">
-                        <h4>Alan Sze</h4>
-                        <p class="text-muted">Ultradian Core Engineer</p>
+                        <img src="../img/team/bob.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Bob Kerch</h4>
+                        <p class="text-muted">Cheif Operating Officer</p>
                     </div>
                 </div>
 
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="../img/team/sam.png" class="img-responsive img-circle" alt="">
-                        <h4>Sam Casey</h4>
-                        <p class="text-muted">Designer, Creativity Advocate</p>
+                        <img src="../img/team/nick.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Nick McConnell</h4>
+                        <p class="text-muted">iOS Engineer</p>
                     </div>
                 </div>
 
             </div>
             <div class="row row-center">
+
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/blake.png" class="img-responsive img-circle" alt="">
+                        <h4>Blake Sakran</h4>
+                        <p class="text-muted">Head of R&D</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/alan.png" class="img-responsive img-circle" alt="">
+                        <h4>Alan Sze</h4>
+                        <p class="text-muted">Ultradian Core Engineer</p>
+                    </div>
+                </div>
 
                 <div class="col-sm-3">
                     <div class="team-member">
@@ -320,6 +336,9 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="row row-center">
+
                 <div class="col-sm-3">
                     <div class="team-member">
                         <img src="../img/team/nate.jpg" class="img-responsive img-circle" alt="">
@@ -333,17 +352,6 @@
                         <img src="../img/team/bobby.jpg" class="img-responsive img-circle" alt="">
                         <h4>Bobby Kidera</h4>
                         <p class="text-muted">Business Development Specialist</p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="row row-center">
-
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <img src="../img/team/nick.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Nick McConnell</h4>
-                        <p class="text-muted">iOS Engineer</p>
                     </div>
                 </div>
 
