--- a/about/index.html
+++ b/about/index.html
@@ -289,7 +289,7 @@
                     <div class="team-member">
                         <img src="../img/team/bob.jpg" class="img-responsive img-circle" alt="">
                         <h4>Bob Kerch</h4>
-                        <p class="text-muted">Cheif Operating Officer</p>
+                        <p class="text-muted">Chief Operating Officer</p>
                     </div>
                 </div>
 
@@ -297,7 +297,7 @@
                     <div class="team-member">
                         <img src="../img/team/nick.jpg" class="img-responsive img-circle" alt="">
                         <h4>Nick McConnell</h4>
-                        <p class="text-muted">iOS Engineer</p>
+                        <p class="text-muted">Chief Technical Officer</p>
                     </div>
                 </div>
 
