--- a/about/index.html
+++ b/about/index.html
@@ -367,7 +367,7 @@
                     <div class="team-member">
                         <img src="../img/team/wade.png" class="img-responsive img-circle" alt="">
                         <h4>Wade Zeng</h4>
-                        <p class="text-muted">Engineering &amp; Business<br/>Development Partner</p>
+                        <p class="text-muted">Engineering &amp; Business Partner</p>
                     </div>
                 </div>
 
