trying to checkout previous commit

--- a/about/index.html
+++ b/about/index.html
@@ -239,19 +239,11 @@
 
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="../img/team/blake.png" class="img-responsive img-circle" alt="">
-                        <h4>Blake Sakran</h4>
-                        <p class="text-muted">Head of R&D</p>
+                        <img src="../img/team/bob.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Bob Kerch</h4>
+                        <p class="text-muted">Chief Operating Officer</p>
                     </div>
                 </div>
-
-                <!--<div class="col-sm-3">-->
-                    <!--<div class="team-member">-->
-                        <!--<img src="../img/team/bob.jpg" class="img-responsive img-circle" alt="">-->
-                        <!--<h4>Bob Kerch</h4>-->
-                        <!--<p class="text-muted">Chief Operating Officer</p>-->
-                    <!--</div>-->
-                <!--</div>-->
 
                 <div class="col-sm-3">
                     <div class="team-member">
@@ -263,6 +255,14 @@
 
             </div>
             <div class="row row-center">
+
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/blake.png" class="img-responsive img-circle" alt="">
+                        <h4>Blake Sakran</h4>
+                        <p class="text-muted">Head of R&D</p>
+                    </div>
+                </div>
 
                 <div class="col-sm-3">
                     <div class="team-member">
@@ -289,46 +289,46 @@
                 </div>
 
             </div>
-            <!--<div class="row row-center">-->
+            <div class="row row-center">
 
-                <!--<div class="col-sm-3">-->
-                    <!--<div class="team-member">-->
-                        <!--<img src="../img/team/nate.jpg" class="img-responsive img-circle" alt="">-->
-                        <!--<h4>Nate Moman</h4>-->
-                        <!--<p class="text-muted">Team Catalyst, Acoustic Engineer</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/nate.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Nate Moman</h4>
+                        <p class="text-muted">Team Catalyst, Acoustic Engineer</p>
+                    </div>
+                </div>
 
-                <!--<div class="col-sm-3">-->
-                    <!--<div class="team-member">-->
-                        <!--<img src="../img/team/bobby.jpg" class="img-responsive img-circle" alt="">-->
-                        <!--<h4>Bobby Kidera</h4>-->
-                        <!--<p class="text-muted">Business Development Specialist</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/bobby.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Bobby Kidera</h4>
+                        <p class="text-muted">Business Development Specialist</p>
+                    </div>
+                </div>
 
-                <!--<div class="col-sm-3">-->
-                    <!--<div class="team-member">-->
-                        <!--<img src="../img/team/landon.png" class="img-responsive img-circle" alt="">-->
-                        <!--<h4>Landon Washam</h4>-->
-                        <!--<p class="text-muted">Controller</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/landon.png" class="img-responsive img-circle" alt="">
+                        <h4>Landon Washam</h4>
+                        <p class="text-muted">Controller</p>
+                    </div>
+                </div>
 
-                <!--<div class="col-sm-3">-->
-                    <!--<div class="team-member">-->
-                        <!--<img src="../img/team/wade.png" class="img-responsive img-circle" alt="">-->
-                        <!--<h4>Wade Zeng</h4>-->
-                        <!--<p class="text-muted">Engineering &amp; Business Partner</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/wade.png" class="img-responsive img-circle" alt="">
+                        <h4>Wade Zeng</h4>
+                        <p class="text-muted">Engineering &amp; Business Partner</p>
+                    </div>
+                </div>
 
-            <!--</div>-->
+            </div>
 
-            <!--<div class="row row-center">-->
-                <!--<div class="col-lg-8 col-lg-offset-2 text-center">-->
-                <!--</div>-->
-            <!--</div>-->
+            <div class="row row-center">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                </div>
+            </div>
 
         </div>
     </section>
